--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap");
+
 :root {
     --primary-color: #91c2d3;
     --primary-color-dark: #698e9b;
@@ -43,9 +44,20 @@ header {
     margin: 0 5% 0 5%;
 }
 
-.logo,
-nav {
-    flex: 1;
+.logo a{
+    display: inline-block;
+}
+.logo .x-logo, .x-logo {
+    color: var(--primary-color);
+    display: inline-block;
+}
+.logo h3 {
+    color: var(--secondary-color);
+    display: inline-block;
+}
+
+.hamburger {
+    display: none;
 }
 
 .nav-links {
@@ -55,6 +67,7 @@ nav {
 
 li {
     list-style: none;
+    margin: auto 2vw;
 }
 
 .nav-link {
@@ -146,6 +159,7 @@ svg {
 
 .person-text {
     width: 60%;
+    color: white;
 }
 
 .name {
@@ -185,6 +199,10 @@ footer {
     z-index: 1;
     position: relative;
     bottom: 0;
+}
+
+.logo-footer {
+    display: flex;
 }
 
 .credits {
@@ -350,4 +368,138 @@ select {
 
 .main-container .logo img {
     height: 3.5rem;
+}
+
+@media (max-width: 768px){
+
+    .navigation {
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        z-index: 2;
+        top: 0;
+        left: 0;
+        background-color: white;
+        transform: translateX(100%);
+    }
+
+    .navigation--active {
+        transform: translateX(0);
+    }
+
+    .navigation ul {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        height: 100%;
+        align-items: center;
+    }
+
+    .hamburger {
+        padding: 10px;
+        display: inline-block;
+        cursor: pointer;
+        background-color: transparent;
+        border: 0;
+        margin: 0;
+        position: fixed;
+        right: 2rem;
+        z-index: 3;
+    }
+      
+    .hamburger, .navigation {
+        transition: transform .3s .1s ease-in-out;
+    }
+    
+    .hamburger__box {
+        width: 35px;
+        height: 24px;
+        display: inline-block;
+        position: relative;
+    }
+    
+    .hamburger__inner {
+        width: 100%;
+        height: 3px;
+        background-color: var(--secondary-color);
+        position: absolute;
+        left: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        transition: background-color .1s .2s ease-in-out;
+    }
+    
+    .hamburger__inner::before,
+    .hamburger__inner::after {
+        width: 100%;
+        height: 3px;
+        background-color: var(--secondary-color);
+        position: absolute;
+        content: '';
+        left: 0;
+        transition: transform .2s .2s ease-in-out;
+    } 
+    
+    .hamburger__inner::before {
+    top: -10px;
+    }
+    
+    .hamburger__inner::after {
+    top: 10px;
+    }
+    
+    .hamburger--active .hamburger__inner {
+    background-color: transparent;
+    }
+    
+    .hamburger--active .hamburger__inner:before {
+    transform: translateY(10px) rotate(45deg);
+    }
+    
+    .hamburger--active .hamburger__inner:after {
+    transform: translateY(-10px) rotate(-45deg);
+    }
+
+    .hero {
+        /* Sizing */
+        width: 100vw;
+        height: 100vh;
+
+        /* Flexbox stuff */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        /* Text styles */
+        text-align: center;
+
+        /* Background styles */
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-image: url('../img/barber_hero.jpeg');
+    }
+
+    .overlay {
+        background-color: rgba(255, 255, 255, 0.726);
+        width: 100vw;
+        height: 100vh;
+    }
+
+    .hero-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .hero-wrapper .text, .hero-wrapper h1 {
+        margin: auto;
+    }
+
+    .hero-wrapper .img-container {
+        display: none;
+    }
 }
