add templates to client

--- a/xbarbershop-adamczyk-s18730/public/styles/style.css
+++ b/xbarbershop-adamczyk-s18730/public/styles/style.css
@@ -222,6 +222,10 @@ table {
     width: 100%;
 }
 
+.form-table {
+    margin-bottom: 5rem;
+}
+
 .main-container {
     display: flex;
     flex-direction: column;
