--- a/xbarbershop-adamczyk-s18730/views/fragments/header.ejs
+++ b/xbarbershop-adamczyk-s18730/views/fragments/header.ejs
@@ -12,7 +12,7 @@
           </button>
          <nav class="navigation">
              <ul class="nav-links"> 
-                 <li><a class="nav-link <%= navLocation == 'main' ? 'active' : ''%>" href="./">Home</a></li>
+                 <li><a class="nav-link <%= navLocation == 'main' ? 'active' : ''%>" href="/">Home</a></li>
                  <li><a class="nav-link <%= navLocation == 'appointments' ? 'active' : ''%>" href="/appointments">Appointments</a></li>
                  <li><a class="nav-link <%= navLocation == 'services' ? 'active' : ''%>" href="/services">Services</a></li>
                  <li><a class="nav-link <%= navLocation == 'clients' ? 'active' : ''%>" href="/clients">Clients</a></li>
