--- a/xbarbershop-adamczyk-s18730/views/pages/appointment/form.ejs
+++ b/xbarbershop-adamczyk-s18730/views/pages/appointment/form.ejs
@@ -26,7 +26,7 @@
                     <% } %>
                 </span>
             </div>
-            <div class="select">
+            <div class="input">
                 <label for="client_id">Client:</label>
                 <select name="client_id" id="client_id" required <%= (formMode == 'details') ? 'disabled' : '' %>>
                     <option value="" selected>--- Select client ---</option>
@@ -62,9 +62,9 @@
             </div>
             <div class="buttons">
                 <p id="errorsSummary" class="errors-text"></p>
-                <button class="main-button"><a href="/appointments">Back</a></button>
+                <a class="secondary-button" href="/appointments">Back</a>
                 <% if (formMode == 'details') { %>
-                    <button class="main-button"><a href=" ../edit/<%= appointment._id %>">Edit</a></button>
+                    <a class="main-button" href=" ../edit/<%= appointment._id %>">Edit</a>
                 <% } else { %>
                     <input class="main-button" type="submit" value="Submit" />
                 <% } %>
@@ -73,5 +73,6 @@
     </div>
 </div>
     <%- include('../../fragments/footer.ejs') %>
+    <script src="../../JS/script.js"></script>
 </body>
 </html>
