--- a/xbarbershop-adamczyk-s18730/views/pages/client/form.ejs
+++ b/xbarbershop-adamczyk-s18730/views/pages/client/form.ejs
@@ -48,9 +48,9 @@
             </div>
             <div class="buttons">
                 <p id="errorsSummary" class="errors-text"></p>
-                <input type="button" class="secondary-button" value="Back" onclick="history.go(-1)" formnovalidate>
+                <a class="secondary-button" href="/clients">Back</a>
                 <% if (formMode == 'details') { %>
-                    <button class="main-button"><a href="../edit/<%= r_client._id %>">Edit</a></button>
+                    <a class="main-button" href="../edit/<%= r_client._id %>">Edit</a>
                 <% } else { %>
                     <input class="main-button" type="submit" value="Submit" />
                 <% } %>
@@ -65,6 +65,7 @@
                 <th>Service</th>
                 <th>Price</th>
                 <th>Date</th>
+                <th>Actions</th>
             </thead>
             <tbody>
                 <% for (let apps of r_client.appointments) { %>
@@ -73,7 +74,7 @@
                     <td><%= apps.service.price %></td>
                     <td><%= apps.date instanceof Date ? apps.date.toISOString().split('T')[0]:apps.date %></td>
                     <td>
-                        <button class="delete-button"><a href="./clients/delete/<%= r_client._id%>">Delete</a></button>
+                        <a class="delete-button" href="./clients/delete/<%= r_client._id%>">Delete</a>
                     </td>
                 </tr>
                 <% } %>
@@ -82,6 +83,7 @@
     </div>
     <% } %>
 </div>
-    <%- include('../../fragments/footer.ejs') %>
+<%- include('../../fragments/footer.ejs') %>
+<script src="../../JS/script.js"></script>
 </body>
 </html>
